// Copyright (c) 2020-2021 The Open-Transactions developers
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

syntax = "proto2";

package opentxs.proto;
option java_package = "org.opentransactions.proto";
option java_outer_classname = "OTBlockchainTransactionProposedOutput";
option optimize_for = LITE_RUNTIME;

import public "BlockchainOutputMultisigDetails.proto";

message BlockchainTransactionProposedOutput {
    optional uint32 version = 1;
    optional uint64 amount = 2;
    optional uint32 index = 3;
    optional bytes paymentcodechannel = 4;
    oneof style {
        bytes raw = 5;
        bytes pubkey = 6;
        bytes pubkeyhash = 7;
        bytes scripthash = 8;
        BlockchainOutputMultisigDetails multisig = 9;
        bytes data = 10;
    }
    optional bool segwit = 11;
    optional bytes contact = 12;
}
